fix nominee alignment and font size

--- a/src/app/sudoku-grid-value/sudoku-grid-value.component.scss
+++ b/src/app/sudoku-grid-value/sudoku-grid-value.component.scss
@@ -1,5 +1,4 @@
 :host {
-  // flex: 1
     width: 100%;
     height: 100%;
 }
@@ -8,7 +7,7 @@
   width: 100%;
   height: 100%;
   display: grid;
-  justify-content: center;
+  justify-content: stretch;
   background: white;
   user-select: none;
   color: var(--font-color);
@@ -43,11 +42,11 @@
   &__value {
     display: grid;
     align-content: center;
+    text-align: center;
   }
 }
 
 .nominees-grid {
-  // flex: 1;
   width: 100%;
   height: 100%;
   display: grid;
@@ -58,11 +57,11 @@
   grid-gap: 0px;
   font-size: calc(100% - 1.8vw);
   color: var(--light-font-color);
-  // line-height: 0;
 
   &__value {
     display: grid;
     vertical-align: middle;
-    font-size: 70%;
+    text-align: center;
+    font-size: calc(100% + 0.4vw);
   }
 }
